# ConsoleUIEngine

./: Cargo.toml  LICENSE  README.md
examples/: example_text.txt  main.rs
src/: console.rs  lib.rs  main.rs  scene.rs  ui_element.rs
src/console_ui/: buffer.rs  input_events.rs  mod.rs  ui_element.rs
src/console_ui/ui_components/: button.rs  checkbox.rs  content.rs  fps_indicator.rs  input.rs  label.rs  mod.rs  rectangle.rs  text.rs  typer.rs
src/gol/: mod.rs
src/ui_components/: button.rs  checkbox.rs  content.rs  fps_indicator.rs  input.rs  label.rs  mod.rs  rectangle.rs  text.rs  typer.rs
