[package]
name = "console_ui_engine_null"
version = "0.1.0"
authors = ["Harry Yu <harryyunull@gmail.com>"]
edition = "2018"
repository = "https://github.com/harrynull/ConsoleUIEngine"
exclude = [
    "docs/*",
    "examples/",
	".github/"
]

[lib]
name = "console_ui_engine_null"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "examples/main.rs"

[dependencies]
crossterm = "0.13.2"
rand = "0.7.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }